change image object-position to top. limited event names to 40 characters and fixed issue with overflow display on event descriptions

--- a/frontend/src/components/EventsGroups/Events.css
+++ b/frontend/src/components/EventsGroups/Events.css
@@ -38,6 +38,7 @@
     height: 100px;
     width: 178px;
     object-fit: cover;
+    object-position: top;
 }
 
 .event-text-content-container {
