--- a/frontend/src/components/EventsGroups/Groups.css
+++ b/frontend/src/components/EventsGroups/Groups.css
@@ -32,6 +32,7 @@
     height: 100px;
     width: 178px;
     object-fit: cover;
+    object-position: top;
 }
 
 .group-text-content-container{
