--- a/frontend/src/components/SingleEventDetails/SingleEventDetails.css
+++ b/frontend/src/components/SingleEventDetails/SingleEventDetails.css
@@ -46,6 +46,7 @@
     width: 630px;
     height: 100%;
     object-fit: cover;
+    object-position: top;
     border-radius: 8px;
 }
 
@@ -93,7 +94,9 @@
 #event-details-title{
     margin-bottom: 10px;
 }
-
+#event-description-container{
+    overflow-wrap: break-word;
+}
 #event-description{
     font-size: 16px;
     font-weight: 300;
