--- a/frontend/src/components/SingleGroupPage/SingleGroupPage.css
+++ b/frontend/src/components/SingleGroupPage/SingleGroupPage.css
@@ -22,6 +22,7 @@
     width: 565px;
     height: 100%;
     object-fit: cover;
+    object-position: top;
     border-radius: 8px;
 }
 
